[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/DTNouveau-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/ConfirmationBox.gd" type="Script" id=2]
[ext_resource path="res://gui/assets/button-click.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.258824, 0.223529, 0.223529, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.258824, 0.223529, 0.223529, 1 )

[node name="Confirmation" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.529
anchor_top = 0.598
anchor_right = 0.529
anchor_bottom = 0.598
margin_left = -249.696
margin_top = -76.8
margin_right = 241.304
margin_bottom = 74.2
color = Color( 1, 0.737255, 0.737255, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 18.0
margin_top = 30.0
margin_right = 470.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Are you sure? This will erase your current save."

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
margin_left = 127.0
margin_top = 91.0
margin_right = 350.0
margin_bottom = 131.0
hint_tooltip = "dgdfg"
custom_constants/separation = 20

[node name="Yes" type="Button" parent="ColorRect/HBoxContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Yes"

[node name="No" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "No"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
pitch_scale = 2.0

[connection signal="mouse_entered" from="ColorRect/HBoxContainer/Yes" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="mouse_entered" from="ColorRect/HBoxContainer/No" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ColorRect/HBoxContainer/No" to="." method="_on_No_pressed"]
